# TomsDataOnion

./: CMakeLists.txt
data/: layer6.txt  layer6_payload.txt  the_core.txt
src/: CMakeLists.txt  aes.cpp  aes.hpp  bitwise.cpp  main.cpp  virtual_machine.cpp  virtual_machine.hpp
test/: CMakeLists.txt  test_virtual_machine.cpp
